--- a/package.json
+++ b/package.json
@@ -1,26 +1,47 @@
 {
-  "name": "electron-vite-quick-start",
-  "version": "0.0.0",
-  "description": "A Electron application create by Vite",
-  "main": "./dist/main/main.cjs.js",
-  "repository": "https://github.com/yingpengsha/electron-vite-quick-start.git",
-  "author": "Pengsha Ying <810998652@qq.com>",
-  "license": "MIT",
-  "private": true,
-  "workspaces": {
-    "packages": [
-      "src/*"
-    ]
-  },
-  "scripts": {
-    "start": "node ./scripts/dev-runner",
-    "build": "node ./scripts/build"
-  },
-  "devDependencies": {
-    "chalk": "^4.1.1",
-    "electron": "^12.0.8",
-    "electron-builder": "^22.10.5",
-    "listr": "^0.14.3",
-    "vite": "^2.3.3"
-  }
+    "name": "fast-vite-electron",
+    "version": "0.0.1",
+    "description": "Vite + Electron with esbuild, so fast! ⚡",
+    "main": "dist/main/index.js",
+    "scripts": {
+        "dev": "rimraf dist && vite",
+        "build": "rimraf dist && vite build",
+        "test": "npm run test:main && npm run test:render",
+        "test:render": "vitest run -r src/render --passWithNoTests",
+        "test:main": "vitest run -r src/main --passWithNoTests",
+        "test:e2e": "vitest run",
+        "postinstall": "electron-builder install-app-deps",
+        "postuninstall": "electron-builder install-app-deps"
+    },
+    "dependencies": {
+        "@element-plus/icons-vue": "^1.1.4",
+        "@types/uuid": "^8.3.4",
+        "bytenode": "^1.3.5",
+        "electron-store": "^8.0.1",
+        "element-plus": "^2.1.10",
+        "reflect-metadata": "^0.1.13",
+        "uuid": "^8.3.2",
+        "vue": "^3.2.33",
+        "vue-router": "4"
+    },
+    "devDependencies": {
+        "@anatine/esbuild-decorators": "^0.2.19",
+        "@vitejs/plugin-vue": "^2.3.1",
+        "@vue/compiler-sfc": "^3.2.33",
+        "@vue/test-utils": "^2.0.0-rc.21",
+        "chalk": "^4.1.2",
+        "electron": "^18.0.4",
+        "electron-builder": "^23.0.3",
+        "esbuild": "^0.14.36",
+        "happy-dom": "^2.55.0",
+        "playwright": "^1.21.1",
+        "rimraf": "^3.0.2",
+        "tslib": "^2.3.1",
+        "typescript": "^4.6.3",
+        "unplugin-auto-import": "^0.7.1",
+        "unplugin-vue-components": "^0.19.3",
+        "vite": "^2.9.5",
+        "vitest": "^0.9.3",
+        "vue-tsc": "^0.34.7"
+    }
 }
