--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@element-plus/icons-vue": "^1.1.4",
         "@types/uuid": "^8.3.4",
         "bytenode": "^1.3.5",
+        "ejs": "^3.1.7",
         "electron-store": "^8.0.1",
         "element-plus": "^2.1.10",
         "reflect-metadata": "^0.1.13",
@@ -26,6 +27,7 @@
     },
     "devDependencies": {
         "@anatine/esbuild-decorators": "^0.2.19",
+        "@types/ejs": "^3.1.0",
         "@vitejs/plugin-vue": "^2.3.1",
         "@vue/compiler-sfc": "^3.2.33",
         "@vue/test-utils": "^2.0.0-rc.21",
